# openpet

./: .gitignore  README.md
CoPet/: .gitignore  (+12 more)
CoPet/src-tauri/: Cargo.toml  tauri.conf.json
CoPet/src-tauri/assets/pets/copet-mecha/: pet.json
CoPet/src-tauri/assets/pets/copet-neo/: pet.json
CoPet/src-tauri/assets/pets/copet-nia/: pet.json
CoPet/src-tauri/assets/pets/dj-fuzz/: pet.json
CoPet/src-tauri/assets/pets/dog/: pet.json
CoPet/src-tauri/assets/pets/dragon/: pet.json
CoPet/src-tauri/assets/pets/duck/: pet.json
CoPet/src-tauri/assets/pets/goat/: pet.json
CoPet/src-tauri/assets/pets/goku/: pet.json
CoPet/src-tauri/assets/pets/horse/: pet.json
CoPet/src-tauri/assets/pets/monkey/: pet.json
CoPet/src-tauri/capabilities/: default.json
CoPet/src-tauri/icons/: icon.icns
CoPet/src-tauri/src/: app_state.rs  commands.rs  config_store.rs  diagnostics.rs  i18n.rs  lib.rs  main.rs  pet_context_menu.rs  pet_import.rs  pet_package.rs  pet_registry.rs  runtime_server.rs  runtime_state.rs  sound_pack.rs  window_placement.rs
CoPet/src-tauri/src/agents/: mod.rs
CoPet/src-tauri/tests/: agent_support.rs  config_store.rs  config_store_sync.rs  diagnostics.rs  event_state_engine.rs  i18n.rs  pet_context_menu.rs  pet_import.rs  pet_interactions.rs  pet_sounds.rs  repo_layout.rs  reset_pet_window_position.rs  runtime_http.rs  runtime_server_core.rs  runtime_state.rs  sound_packs.rs  window_placement.rs
CoPet/src-tauri/tests/agent_support/: antigravity.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  helpers.rs  manager.rs  opencode.rs  pi.rs
(+109 files in other folders)
